fix z-index

--- a/styles/global/header.css
+++ b/styles/global/header.css
@@ -2,7 +2,7 @@
 
 .main-header {
 	position: sticky;
-	z-index: 1000;
+	z-index: 1000000000;
 	top: 0vh;
 	background-color: var(--color-violet-darkest);
 	height: 80px;
